[tool.poetry]
name = "app"
version = "0.1.0"
description = "Template Python App"
authors = ["Your Name Here <yourname@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/..."
repository = "https://github.com/..."

[tool.poetry.dependencies]
python = "^3.12.0"
aiohttp = "^3.9.5"
aiosignal = "^1.3.1"
appnope = "^0.1.4"
asttokens = "^2.4.1"
async-lru = "^2.0.2"
async-timeout = "^4.0.2"
attrs = "^23.1.0"
backcall = "^0.2.0"
"backports.functools-lru-cache" = "^2.0.0"
cachetools = "^5.3.1"
certifi = "^2023.5.7"
charset-normalizer = "^3.1.0"
comm = "^0.2.2"
debugpy = "^1.8.2"
decorator = "^4.4.2"
discord = "^2.2.3"
"discord.py" = "^2.2.3"
executing = "^2.0.1"
frozenlist = "^1.4.1"
google-api-core = "^2.11.1"
google-api-python-client = "^2.91.0"
google-auth = "^2.21.0"
google-auth-httplib2 = "^0.1.0"
google-auth-oauthlib = "^1.0.0"
googleapis-common-protos = "^1.59.1"
httplib2 = "^0.22.0"
idna = "^3.4"
imageio = "^2.31.2"
imageio-ffmpeg = "^0.4.8"
importlib_metadata = "^8.0.0"
jedi = "^0.19.1"
matplotlib-inline = "^0.1.7"
moviepy = "^1.0.3"
multidict = "^6.0.5"
nest-asyncio = "^1.6.0"
numpy = "^2.0.0"
oauth2client = "^4.1.3"
oauthlib = "^3.2.2"
packaging = "^24.1"
parso = "^0.8.4"
pexpect = "^4.9.0"
pickleshare = "^0.7.5"
Pillow = "^10.0.0"
platformdirs = "^4.2.2"
proglog = "^0.1.10"
progressbar2 = "^4.3.2"
prompt_toolkit = "^3.0.47"
protobuf = "^4.23.3"
psutil = "^6.0.0"
ptyprocess = "^0.7.0"
pure-eval = "^0.2.2"
pyasn1 = "^0.5.0"
pyasn1-modules = "^0.3.0"
Pygments = "^2.18.0"
pyparsing = "^3.1.0"
pyser = "^0.1.5"
python-dateutil = "^2.9.0.post0"
python-dotenv = "^1.0.0"
python-utils = "^3.8.1"
pytube = "^15.0.0"
pyzmq = "^26.0.3"
requests = "^2.31.0"
requests-oauthlib = "^1.3.1"
rsa = "^4.9"
setuptools = "^70.3.0"
simple-youtube-api = "^0.2.8"
six = "^1.16.0"
stack-data = "^0.6.3"
tornado = "^6.4.1"
tqdm = "^4.66.1"
traitlets = "^5.14.3"
tweepy = "^4.14.0"
typing_extensions = "^4.12.2"
uritemplate = "^4.1.1"
urllib3 = "^1.26.16"
wcwidth = "^0.2.13"
yarl = "^1.9.2"
zipp = "^3.19.2"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.12.0"
flake8 = "^6.0.0"
flake8-annotations = "^2.6.2"
flake8-bugbear = "^22.1.11"
flake8-docstrings = "^1.6.0"
flake8-isort = "^6.0.0"
flake8-string-format = "^0.3.0"
flake8-todo = "^0.7"
pep8-naming = "^0.13.3"
pre-commit = "^2.13.0"
taskipy = "^1.8.1"
ipykernel = "^6.29.5"
ipython = "^8.26.0"
jupyter_client = "^8.6.2"
jupyter_core = "^5.7.2"

[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100

[tool.taskipy.tasks]
app = { cmd = "python -m app", help = "Runs the main package" }
lint = { cmd = "pre-commit run --all-files", help = "Lints project files" }
precommit = { cmd = "pre-commit install", help = "Installs the pre-commit git hook" }
format = { cmd = "black --target-version py312 .", help = "Runs the black python formatter" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
